# ariadne-graphql-modules-v2-example

./: .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
example/: __init__.py  database.py  fixture.py  schema.py
example/enums/: groupfilter.py  role.py
example/interfaces/: search_result.py
example/models/: category.py  group.py  post.py  user.py
example/mutations/: __init__.py  calc.py  compare_roles.py  dates_delta.py  enum_repr.py
example/queries/: __init__.py  calendar.py  categories.py  groups.py  hello.py  models.py  posts.py  search.py  users.py
example/scalars/: date.py  datetime.py
example/subscriptions/: __init__.py  events.py
example/types/: category.py  event.py  group.py  post.py  user.py
example/unions/: model.py
tests/: conftest.py  test_dates_delta_mutation.py  test_mutation.py  test_query.py
